unpackaged/main/default/objects/Time_Interval__c/Time_Interval__c.object-meta.xml
<CustomObject>
    <label>Time Interval</label>
    <nameField>
        <label>Time Interval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Intervals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>