unpackaged/main/default/objects/Time_Interval__c/fields/Application_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Application_Deadline__c</fullName>
    <description>The last day that an application can be submitted</description>
    <label>Application Deadline</label>
    <type>Date</type>
</CustomField>