unpackaged/main/default/objects/Time_Interval__c/fields/Remaining_Available_Trips__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Available_Trips__c</fullName>
    <formula>Max_Number_of_Groups__c  -  Trips_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Available Trips</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>