unpackaged/main/default/objects/Time_Interval__c/fields/Trips_Booked__c.field-meta.xml
<CustomField>
    <fullName>Trips_Booked__c</fullName>
    <description>It will capture the Trips Booked for El Tesoro Brand</description>
    <label>Trips Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>